[build-system]
requires = ["poetry>=1.2.0b3", "poetry-dynamic-versioning-plugin"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry]
name = "belay"
version = "0.0.0"  # Do not change, let poetry-dynamic-versioning handle it.
homepage = "https://github.com/BrianPugh/belay"
repository = "https://github.com/BrianPugh/belay"
license = "Apache-2.0"
description = ""
authors = ["Brian Pugh"]
readme = "README.rst"
packages = [{include = "belay"}]

[tool.poetry.scripts]
belay = "belay.cli.main:app"

[tool.poetry.dependencies]
# Be as loose as possible if writing a library.
python = "^3.8"
pyserial = "^3.1"
typer = {extras = ["all"], version = "^0.6"}

[tool.poetry.group.docs.dependencies]
sphinx = "~4.5.0"
sphinx_rtd_theme = "~1.0.0"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^5.1"}
flake8 = "^4.0.1"
ipdb = "^0.13.9"
poetry-dynamic-versioning = "^0.16.0"
pre_commit = "^2.16.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "belay/pyboard.py",  # Mostly comes from the MicroPython mpremote project.
    "belay/snippets/*",  # Ignore on-device code-snippets
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug:",
    "if debug:",
    "if DEBUG:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",

    # Don't run stuff decorated by belay decorators.
    "@self.task",
    "@device.task",
    "@self.thread",
    "@device.thread",
]

[tool.bandit]
exclude_dirs = [
    "tests",
]
